--- a/homestay.html
+++ b/homestay.html
@@ -57,10 +57,10 @@
                     <div class="carousel-item flex-shrink-0 w-full active">
                         <img class="carousel-image" src="homestay1.jpg" alt="Modern Villa" onerror="this.src='https://placehold.co/1000x450/4F46E5/ffffff?text=MODERN+VILLA';">
                     </div>
-                    <div class="carousel-item flex-shrink-0 w-full hidden">
+                    <div class="carousel-item flex-shrink-0 w-full active">
                         <img class="carousel-image" src="homestay2.jpg" alt="Minimalist Semi D" onerror="this.src='https://placehold.co/1000x450/10B981/ffffff?text=MINIMALIST+SEMI+D';">
                     </div>
-                    <div class="carousel-item flex-shrink-0 w-full hidden">
+                    <div class="carousel-item flex-shrink-0 w-full active">
                         <img class="carousel-image" src="homestay3.jpg" alt="Classic Homestay View" onerror="this.src='https://placehold.co/1000x450/EF4444/ffffff?text=CLASSIC+HOMESTAY';">
                     </div>
                     
@@ -220,3 +220,4 @@
     </script>
 </body>
 </html>
+
